--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+<h1 style="text-align:center">TinyJira : is a small jira clone built with <b><i>Spring Boot</b></i> and <b><i>React</i></b></h1>
+---
 
 ![Home](https://raw.githubusercontent.com/Ayyoub-ESSADEQ/TinyJira-frontend/main/media/image.png?token=GHSAT0AAAAAACQJY5XMFISIQSMPSO2JCMEAZRQNH5Q) <br>
 ![Java](https://img.shields.io/badge/-Java-%23000000?logo=openjdk) ![Spring Boot](https://img.shields.io/badge/-Spring_Boot-%23a8ffad?logo=springboot) ![Maven](https://img.shields.io/badge/-Maven-%236D00CC?logo=apachemaven) ![Typescript](https://img.shields.io/badge/-Typescript-gray?logo=typescript) ![Javascript](https://img.shields.io/badge/-Javascript-gray?logo=javascript) ![Vite](https://img.shields.io/badge/-Vite-violet?logo=vite) ![React](https://img.shields.io/badge/-React-blue?logo=react) ![Tailwind](https://img.shields.io/badge/-Tailwind-cyan?logo=tailwindcss&labelColor=cyan) ![MIT License](https://img.shields.io/badge/license-MIT-blue)
@@ -21,7 +23,6 @@ TinyJira is a project management tool inspired by Jira, designed to facilitate p
 `).
 - Run the application.
 - The TinyJira application should now be accessible at `http://localhost:5173/project/project_id`.
-
 
 ## License
 
